<resources>
    <string name="app_name">MyCV</string>
    <string name="loading">Loading</string>
    <string name="skillset">Skillset</string>
    <string name="recent_personal_projects">Recent Personal Projects</string>
    <string name="incomplete_personal_projects">Incomplete Personal Projects</string>
    <string name="old_projects">Old Projects</string>
    <string name="project_title">%1$s (%2$s)</string>
    <string name="work">Work</string>
    <string name="education">Education</string>
    <string name="languages">Languages</string>
    <string name="hobbies">Hobbies</string>
    <string name="location_from_to">%1$s %2$s - %3$s</string>
    <string name="error">An error has occurred</string>
    <string name="try_again">Failed, tap to try again</string>
    <string name="total_item">%1$d item</string>
    <string name="total_items">%1$d items</string>
</resources>
